--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,7 +7,8 @@
     --star-gold-color:#ffce3e;
     --header-height:120px;
     --navbar-height:34px;
-    --header-search-height: calc(var(--header-height) - var(--navbar-height) )
+    --header-search-height: calc(var(--header-height) - var(--navbar-height) );
+    --header-sort-bar-height: 46px;
 }
 
 *{
