--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+.app{
+    overflow: hidden;
+}
+
 .header{
     height: var(--header-height);
     background-image: linear-gradient(0,#fe6433,#f53e2d);
@@ -492,6 +496,18 @@
     margin:0 8px;
 }
 
+
+.header__mobile-search{
+    padding: 0 12px;
+    display: none;
+}
+
+.header__mobile-search-icon {
+    font-size: 2.6rem;
+    color: var(--white-color);
+
+}
+
 .header__logo{
     width: 200px;
 }
@@ -499,6 +515,12 @@
 .header__logo-link{
     color: transparent;
     text-decoration: none;
+    display: block;
+    line-height: 0;
+}
+
+.header__search-checkbox:checked ~ .header__search{
+    display: flex;
 }
 
 .header__logo-img{
@@ -525,6 +547,7 @@
     display: inline-block;
     padding: 0 12px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__cart-wrap:hover .header__cart-list{
@@ -556,7 +579,7 @@
 .header__cart-list-item{
     padding-left: 0;
     list-style: none;
-    height: 50vh;
+    max-height: 50vh;
     overflow-y: auto;
 }
 
@@ -732,7 +755,8 @@
     padding-left: 16px;
     position: relative;
     cursor: pointer;
-    
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
 }
 
 .header__search-select:hover .header__search-option{
@@ -742,6 +766,7 @@
 .header__search-select-label{
     font-size: 1.4rem;
     color: var(--text-color);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__search-select-icon{
@@ -879,7 +904,62 @@
     display: block;
 }
 
+/* Header sort bar */
+
+.header__sort-bar{
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: var(--header-sort-bar-height);
+    background-color: var(--white-color);
+    
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+    display: none;
+}
+
+.header__sort-item{
+    flex: 1;
+}
+
+.header__sort-item--active .header__sort-link{
+    color: var(--primary-color);
+    border-bottom:2px solid var(--primary-color);
+}
+
+.header__sort-link{
+    text-decoration: none;
+    color: var(--text-color);
+    display: block;
+    font-size: 1.4rem;
+    height: 100%;
+    line-height: var(--header-sort-bar-height);
+    text-align: center;
+    border-top:1px solid var(--border-color) ;
+    border-bottom:1px solid var(--border-color) ;
+    position: relative;
+}
+
+.header__sort-item:first-child .header__sort-link::before{
+    display: none;
+}
+
+.header__sort-link::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 60%;
+    border-left:1px solid var(--border-color) ;
+    transform: translateY(-50%);
+}
+
+
 /* App Container */
+
+
 
 .app__container{
     background-color: #f5f5f5;
@@ -944,6 +1024,65 @@
     right: -4px;
     color: var(--primary-color);
 }
+
+/* Mobile Category */
+.mobile-category{
+    display: none;
+}
+
+.mobile-category__list{
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+    max-width: 100%;
+    overflow-x: auto;
+}
+
+.mobile-category__list::-webkit-scrollbar{
+    display: none;
+}
+
+.mobile-category__item{
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+
+.mobile-category__item:nth-of-type(3n+1) .mobile-category__link{
+    background-color: #87afd8;
+}
+
+.mobile-category__item:nth-of-type(3n+2) .mobile-category__link{
+    background-color: #76c9bd;
+}
+
+.mobile-category__item:nth-of-type(3n+3) .mobile-category__link{
+    background-color: #88cf81;
+}
+
+.mobile-category__link{
+    --line-height:2rem;
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 1.4rem;
+    line-height: var(--line-height);
+    height: calc(var(--line-height) * 2);
+    font-weight: 400;
+    text-align: center;
+    width: 110px;
+    display: block;
+    border-radius: 4px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    padding: 0 6px;
+}
+
+
+
+
 
 /* Home sort + filter */
 
@@ -1210,6 +1349,7 @@ i.home-product-item__like-icon-fill{
 
 .home-product__pagination{
     margin: 48px 0 32px 0;
+    padding-left: 0;
 }
 
 /* Footer */
